--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,4 @@ compatibility_flags = ["nodejs_compat"]
 compatibility_date = "2024-07-01"
 pages_build_output_dir = "./build/client"
 send_metrics = false
+command = "NODE_OPTIONS=--max_old_space_size=4096 pnpm run build"
